--- a/index.html
+++ b/index.html
@@ -1,45 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de Registro</title>
+  <meta charset="UTF-8">
+  <title>Formulario de Registración</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Registro</h1>
+  <h1>Formulario de Registración</h1>
+  <form id="registroForm">
+    <label>Apellido: <input type="text" id="apellido" required></label><br>
+    <label>Nombre: <input type="text" id="nombre" required></label><br>
+    <label>DNI: <input type="text" id="dni" required></label><br>
+    <label>Fecha de Nacimiento: <input type="date" id="fechaNacimiento" required></label><br>
+    <label>Email: <input type="email" id="email" required></label><br>
+    <button type="button" onclick="validarFormulario()">Validar</button>
+  </form>
 
-    <label for="apellido">Apellido:</label>
-    <input type="text" id="apellido">
-    <br>
-    <label for="nombre">Nombre:</label>
-    <input type="text" id="nombre" step="0.01" min="0">
-    <br>
-    
-    <br>
-    <label for="dni">DNI:</label>
-    <input type="number" id="dni" step="0.01 min="0">
-    <br>
+  <h2>Preguntas personales</h2>
+  <button onclick="hacerPreguntas()">Responder 3 preguntas</button>
+  <div id="respuestas"></div>
 
-
-
-    <label for="Fecha Nacimiento:">fechaNacimiento</label>
-    <input type="date" id="nacimiento" step="0.01" min="2006">
-   
-
-    <label for="email:">Email</label>
-    <input type="email" id="email" step="0.01" min="0">
-    
-
-
-    <label>
-    <button onclick="BotonProgresivo()">Preguntas repuestas</button>
-    <p id="mensajeError" class="error"></p>
-    </label>
-
-
-
-
-
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
